--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* FORMULARIO LOGIN */
+.titleForm {
+  @apply font-semibold text-indigo-700 mb-5 text-2xl
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.inputForm {
+  @apply w-full mb-2 border-b outline-none focus:border-b-indigo-800 text-base h-9 text-gray-600 transition ease-in delay-300 duration-300
 }
+
+.buttonForm {
+  @apply w-full py-1 bg-indigo-500 rounded-sm text-base text-white shadow-md transition ease-in delay-300 duration-300
+}
+
+/* FORMULARIOS
+.titleForm {
+  @apply text-3xl text-center uppercase font-semibold block mb-6
+}
+
+.labelForm {
+  @apply block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2
+}
+
+.inputForm {
+  @apply appearance-none block uppercase w-full bg-gray-100 text-gray-700 border border-blue-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white
+}
+
+.buttonForm {
+  @apply bg-blue-500 hover:bg-blue-700 px-2 py-2 rounded text-white w-full mb-2 uppercase font-semibold
+} */
